--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,31 +5,14 @@
     {
       // Example of attaching to local debug server
       "name": "Python: Attach Local",
-      "type": "python",
-      "request": "attach",
-      "port": 5678,
-      "host": "localhost",
+      "type": "debugpy",
+      "request": "launch",
+      "module": "homeassistant",
       "justMyCode": false,
-      "pathMappings": [
-        {
-          "localRoot": "${workspaceFolder}",
-          "remoteRoot": "."
-        }
-      ]
-    },
-    {
-      // Example of attaching to my production server
-      "name": "Python: Attach Remote",
-      "type": "python",
-      "request": "attach",
-      "port": 5678,
-      "host": "homeassistant.local",
-      "pathMappings": [
-        {
-          "localRoot": "${workspaceFolder}",
-          "remoteRoot": "/usr/src/homeassistant"
-        }
-      ]
+      "args": ["--debug", "--config", "${workspaceFolder}/config"],
+      "env": {
+        "PYTHONPATH": "${env:PYTHONPATH}:${workspaceFolder}/custom_component"
+      }
     }
   ]
 }
